# MOUSE_TRAP

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  promote-develop-to-main.yml
docs/: api.rst  conf.py  development.rst  index.rst  usage.rst
src/mouse_trap/: __init__.py  __main__.py  annotation.py  conversion.py  gui.py  simba_labels.py  sleap_cli.py
tests/: conftest.py  test_annotation.py  test_conversion.py  test_gui.py  test_parse_status.py  test_sleap_cli.py
